# clisonix.com

./: -w  .env.example  .env.sample  .gitignore  .mailmap  AGENT_TELEMETRY_DOCS.md  AI_AGENTS_README.md  AI_AGENT_FRAMEWORKS.md  API-COMPLETE-REFERENCE.md  API_CONFIG.py  API_DOCS.md  ARCHITECTURE_SUMMARY.md  ASI-API-GUIDE.md  ASI-API-QUICK-REFERENCE.md  AUTHENTICATION.md  BUILD.md  CI_QUICK_REFERENCE.md  CLEANUP_REPORT_DEC2025.md  CLISONIX_ARCHITECTURE_BASELINE_2025.md  CLISONIX_IDENTITY_COMPLETE.md  CLISONIX_INTELLIGENCE_README.md  CLISONIX_USER_GUIDE.md  COMPLETE_DELIVERY_SUMMARY.md  COMPLETE_SYSTEM_GUIDE.md  COMPLETE_TRANSFORMATION_SUMMARY.md  COMPLIANCE_CHECKLIST.md  CONNECTION_POOL_GUIDE.md  CONTRIBUTORS.md  CURIOSITY_OCEAN_SETUP.md  CURRENT_STATUS.md  CYCLE_ARCHITECTURE_DIAGRAM.md  CYCLE_DOCUMENTATION_INDEX.md  CYCLE_ENGINE_DEMO.py  CYCLE_ENGINE_DOCS.md  CYCLE_INTEGRATION_SUMMARY.md  CYCLE_QUICK_REFERENCE.md  CYCLE_RAPORT_PERFUNDIMTAR_SQ.md  Clisonix-Cloud-API.postman_collection.json  Clisonix-Cloud-Marketplace.postman_collection.json  Clisonix-Cloud-Real-APIs.postman_collection.json  (+453 more)
.github/: copilot-instructions.md  copilot-tool-sets.md  dependabot.yml
.next/: prerender-manifest.json  trace
.thunder-client/: README.md  thunderCollection.json  thunderEnvironment.json  thunderFolder.json  thunderclient.json
agents/: __init__.py  base.py  core.py  cycles.py  orchestrator.py  pool.py  registry.py  specialized.py  telemetry.py
airflow/: requirements.txt
archive/: industrial_dashboard_demo.py  industrial_data.py
backend/: config.ts  fix_neuro.ps1  package.json  server-optimized.ts  server.ts  tsconfig.json
clisonix/: __init__.py  alert_policy.py  colored_logger.py  curiosity_ocean_bridge.py  pulse_cycle_bridge.py
config/: CLOUDFLARE_OPTIMIZATION.py  alert_policy.json  api_keys.json  neurosonix.json  nginx-clisonix.conf  nginx-optimized.conf  nginx-server-current.conf  prometheus.yml  tempo.yaml
core/: __init__.py  auto_registry.py  service_bridge.py
curiosity-ocean/: __init__.py
cycles/: cycle-032199fd-f019-4409-9eaf-401a7e6ceb7d.json  cycle-046ca770-110c-41d4-a7d9-c32379238857.json  cycle-0716514b-3b95-49ff-89d1-a30df52bd5da.json  cycle-09689a3a-40a0-4fda-bce5-7f9d59b96727.json  cycle-0aa35909-9eed-47e1-b0dd-1b83770fd370.json  cycle-0bb3972d-4db5-4917-82d3-b3ffa400d44a.json  cycle-0be36657-efd6-48ae-96af-ef06cc4cf194.json  cycle-0f391e83-0392-4da7-a825-6f8c93db16b9.json  cycle-1260fab7-d16b-44c7-9a2c-acc75a85e13e.json  cycle-1279be0a-2b4a-4a51-815d-3d48e67cd680.json  cycle-146ddb49-ece4-41bf-bcd2-192cf8df808f.json  cycle-152fce43-6779-4c00-a16c-f37f185e7f8a.json  cycle-15b6723d-799d-436f-bbd5-e09897d0a015.json  cycle-178a6e12-9033-406c-91bd-f4c90714a8f2.json  cycle-1c3fcf27-cf43-4a2a-a2ee-708f4a648b48.json  cycle-1f7437a4-7935-4e84-ade0-6e44a2007f25.json  cycle-25df7965-ee15-4597-bdf9-33cd9320e604.json  cycle-27286050-f45f-4df8-8abf-5a88fec62b33.json  cycle-28371402-d6f2-4998-a497-7fbad9ebaf56.json  cycle-2a5d1281-94dd-4ac8-be19-3f9797f9305d.json  cycle-2c833e74-53f5-4eac-9e5e-1da1ec8bc10b.json  cycle-2cb76828-84b6-4b75-a867-0f0a34d369e1.json  cycle-322229e6-7c5d-407c-a39f-3fd4f8261baf.json  cycle-34a9ba65-a4d8-4542-b9e2-77ee3ff5aa99.json  cycle-36b23475-e7ed-400e-8733-84724d11d366.json  cycle-37c840ab-2170-49e9-8253-845ce4e9e79f.json  cycle-38c8364b-67a0-4573-a8a5-4c951e1e7a7c.json  cycle-3998afa9-8a5d-4b0a-89c8-3058f6926a90.json  cycle-39d4548b-8aea-4c0f-9fa4-32d05689a63f.json  cycle-3c8c4e92-3f47-4ec0-b882-36dde5e8edae.json  cycle-3d7f737a-483a-4f6c-94a0-15a74e42c161.json  cycle-3fbf9ea8-b9e3-42e7-ae7e-662abf15c5d6.json  cycle-422d9426-808b-4fb4-a0ab-2568fa00d89e.json  cycle-4569d356-e43e-47c1-aeeb-a2cb7736c519.json  cycle-458292bd-8614-4711-a830-10e9c59651fa.json  cycle-473f9790-0aa1-4dc2-a66f-a922281ebcee.json  cycle-474f2dc1-00ff-4269-b874-57acd3196b64.json  cycle-48ae3a32-4be6-4e9f-9ee9-67f4699b7227.json  cycle-4b7745d5-440b-4fcc-9c8f-549320de20ca.json  cycle-4c6b79d9-76bc-487b-8d2f-43209bee22f1.json  (+83 more)
data_sources/: __init__.py  africa_middle_east_sources.py  americas_sources.py  asia_china_sources.py  asia_oceania_global_sources.py  caribbean_central_america_sources.py  central_asia_caucasus_sources.py  eastern_europe_balkans_sources.py  europe_sources.py  global_data_sources.py  india_south_asia_sources.py  pacific_islands_sources.py
db/: neo4j-init.cypher  timescale-init.sql
deployment/: deploy.mjs  deploy.ps1  vercel.json
docker-stubs/: agent_telemetry_stub.py  agiem_stub.py  analytics_stub.py  asi_component_stub.py  aviation_stub.py  behavioral_stub.py  cognitive_stub.py  core_engine_stub.py  cycle_engine_stub.py  datasource_stub.py  economy_stub.py  excel_stub.py  health_monitor.py  init-postgres.sh  lab_stub.py  marketplace_stub.py  multi_tenant_stub.py  neurosonix_stub.py  personas_stub.py  quantum_stub.py  reporting_stub.py  router_stub.py  saas_api_stub.py  saas_orchestrator_stub.py  service_stub.py
docs/: API_FABRIC_IMPLEMENTATION.md  API_GUIDELINES.md  API_Producer_Manager_README.md  API_Producer_Manager_README_fixed.md  ARCHITECTURE.md  BUSINESS_STRATEGY.md  CATALOG_GOVERNANCE_SETUP.md  CLERK_INTEGRATION.md  DEPLOYMENT.md  DEVELOPMENT_GUIDELINES.md  DNS_CONFIGURATION_STRATO.md  DNS_IPv6_REMOVAL_GUIDE.md  GLOBAL_FREE_DATA_SOURCES.md  INGESTION_PIPELINE_ARCHITECTURE.md  LINKEDIN_INTEGRATION.md  SECURITY.md  STADIA_3_DEPLOYMENT_CHECKLIST.md  STORAGE_INDEXING_INFRASTRUCTURE.md  cloudflare_api_token_template.md  cloudflare_run_guide.md  cloudflare_setup.md  global-open-data-api-plan.md  open_source_links.md  openapi_neurosonix.json
email_templates/: invoice.html  usage_warning.html  welcome_api_key.html
excel-core/: Dockerfile  excel_reporting_api.py  requirements.txt
frontend/: industrial.config.json  next.config.ts  package-lock.json  (+3 more)
sdk/python/: README.md  pyproject.toml
sdk/python/clisonix/: __init__.py
sdk/rust/: Cargo.toml
sdk/rust/src/: lib.rs
services/api/: deps.py  main.py  pyproject.toml  requirements.txt
services/api/routers/: bioscience.py  clinical.py  concept.py  graph.py  search.py  telemetry.py
(+1316 files in other folders)
