[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "Clisonix-cloud"
version = "0.1.0"
description = "Cloud platform for Clisonix EEG-to-Audio and Brain Symphony"
authors = [{name="Ledjan Ahmati"}]
license = {text = "MIT"}
requires-python = ">=3.9"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "sqlalchemy[asyncio]>=2.0.35",
    "asyncpg>=0.30.0",
    "alembic>=1.14.0",
    "redis[hiredis]>=5.2.0",
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    "python-multipart>=0.0.22",
    "stripe>=11.0.0",
    "pydantic[email]>=2.10.0",
    "pydantic-settings>=2.6.0",
    "boto3>=1.36.0",
    "botocore>=1.36.0",
    "numpy>=2.0.0",
    "scipy>=1.14.0",
    "librosa>=0.10.2",
    "mne>=1.8.0",
    "psutil>=6.1.0",
    "opentelemetry-api>=1.29.0",
    "opentelemetry-sdk>=1.29.0",
    "opentelemetry-exporter-otlp>=1.29.0",
    "opentelemetry-instrumentation-fastapi>=0.50b0",
    "opentelemetry-instrumentation-redis>=0.50b0",
    "opentelemetry-instrumentation-sqlalchemy>=0.50b0",
    "celery[redis]>=5.4.0",
    "fastapi-mail>=1.4.2",
    "email-validator>=2.2.0",
    "python-dateutil>=2.9.0",
    "pytz>=2024.2",
    "structlog>=24.4.0",
    "sentry-sdk[fastapi]>=2.19.0",
    "python-dotenv>=1.0.1"
]

[tool.black]
line-length = 88
target-version = ["py311"]
include = '\.pyi?$'
exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''
